--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@reduxjs/toolkit": "^2.2.3",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
